--- a/client/src/style.css
+++ b/client/src/style.css
@@ -55,7 +55,10 @@
   display: block;
   font-weight: 300;
   font-size: 10px;
-  text-transform: uppercase
+  text-transform: uppercase;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .restaurant li .restaurant-detail>.name {
@@ -69,32 +72,22 @@
 .restaurant li .restaurant-detail>.locality {
   display: block;
   font-weight: 500;
-  padding-bottom: 1px;
-  font-size: 12px;
-}
-
-.restaurant li .restaurant-detail>.address {
-  display: block;
-  font-weight: 300;
-  padding-bottom: 1px;
   font-size: 12px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
-.restaurant li .restaurant-detail>.cost {
-  display: block;
-  text-decoration: none;
-  font-size: 12px;
-  font-weight: 300;
-}
-
+.restaurant li .restaurant-detail>.address,
+.restaurant li .restaurant-detail>.cost,
 .restaurant li .restaurant-detail>.time {
   display: block;
   text-decoration: none;
-  font-size: 12px;
   font-weight: 300;
+  font-size: 12px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .data-loading {
